Fixed gear dropdown visibility

--- a/06_css_aatimes/app/assets/stylesheets/components/_gear_dropdown.scss
+++ b/06_css_aatimes/app/assets/stylesheets/components/_gear_dropdown.scss
@@ -27,12 +27,8 @@
   }
 }
 
-.hidden {
-  display: none;
-}
-
 #gear:hover .hidden {
-  display: block;
+  visibility: visible;
 }
 
 .editions {
